<resources>
    <string name="app_name">Route Recon</string>
    <string name="action_settings">Settings</string>
    <string name="default_expire_time">30 Minutes</string>
    <string name="group_name_missing">Group name missing</string>
    <string name="google_api_key_new">AIzaSyDbm3LC-U22_WEvrpwq5swBFWadF5WgaW0</string>
    <string name="google_api_key_old">AIzaSyBzdxDYSdTEZKW09ev-5JB2nYZeUwhrqeU</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Login</string>
    <string name="having_trouble">Having trouble logging in?</string>
    <string name="dont_account">Do not have an account?</string>
    <string name="text">Affect the outcome!</string>
    <string name="create_new">Create New!</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in">Sign in!</string>
    <string name="sign_up">Sign Up</string>
    <string name="by_signing_up">by signing up you are agree to out <u>terms &amp; condition</u> and <u>privacy policy</u>. </string>
    <string name="forget_pass">Forget Password</string>
    <string name="send_verification">We will send verification code to your email address in 60 sec.</string>
    <string name="please_check_mail">Please check email</string>
    <string name="trips">Routes</string>
    <string name="maps">Maps</string>
    <string name="shared">Shared</string>
    <string name="tracker">Tracer</string>
    <string name="settings">Settings</string>
    <string name="create_trip">Create Route</string>
    <string name="next">Next</string>
    <string name="send_code">Send Code</string>
    <string name="next_trip">Upcoming</string>
    <string name="last_trip">Previous</string>
    <string name="trip_name">Route Name</string>
    <string name="trip_route">Dhaka-Khulna</string>
    <string name="time">9:30 am</string>
    <string name="phone_number">Phone Number</string>
    <string name="text_phone_required">Phone Number (Required)</string>
    <string name="my_trips">Shared By Me</string>
    <string name="being_shared">Shared With Me</string>
    <string name="followers">Followers</string>
    <string name="pending">Pending</string>
    <string name="following">Following</string>
    <string name="create_group">Create a New group</string>
    <string name="manage_group">Manage Group</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="share_trip">Share</string>
    <string name="navigate">Navigate</string>
    <string name="accept">Accept</string>
    <string name="unfollow">Unfollow</string>
    <string name="trip_start_time">Begin Time</string>
    <string name="trip_end_time">End Time</string>
    <string name="attending_trips">Attending Routes</string>
    <string name="pending_trips">Pending Routes</string>
    <string name="direction">Direction</string>
    <string name="navigation">Navigation</string>
    <string name="start">Start</string>
    <string name="trip_details">Trip Details</string>
    <string name="starts_from">Route Starts</string>
    <string name="ends_from">Route Ends</string>
    <string name="pick_location">Pick Location</string>
    <string name="yes">Yes</string>
    <string name="add_waypoint">No, Add Waypoint</string>
    <string name="safe">Safe</string>
    <string name="landmark">Landmark</string>
    <string name="danger">Danger</string>
    <string name="ie_name">i.e. Syria</string>
    <string name="enter_starting_point">Enter Starting Point</string>
    <string name="ie_starting_point">i.e. 123 75th ST SE Syria</string>
    <string name="enter_destination_point">Enter Destination</string>
    <string name="ie_destination_point">i.e. 857th NE 75th ST Syria</string>
    <string name="email_text">byronk@seattlesoftware.com</string>
    <string name="block">Block</string>
    <string name="follow">Follow</string>
    <string name="trip_begins">Route Begins</string>
    <string name="ie_trip_begins">i.e. 01/01/2019</string>
    <string name="trip_ends">Route Ends</string>
    <string name="ie_trip_ends">i.e. 01/02/2019</string>
    <string name="is_this_text_okay">Is This Route Okay?</string>
    <string name="user_search">User Search</string>
    <string name="friends">Friends</string>
    <string name="manage_groups">Create &amp; Manage Groups</string>
    <string name="logout_travel_planner">Log out of Route Recon</string>
    <string name="delete_group">Delete Group</string>
    <string name="sure_logout">Are you sure you want to log out</string>
    <string name="sure_delete_group">Are you sure about delete this group?</string>
    <string name="sure_cancel">Are you sure to cancel this trip?</string>
    <string name="no_follower_description">You have no follower to share your location with</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search..</string>
    <string name="nav_from_current_pos">Navigate via direct Route</string>
    <string name="nav_from_start_pos">Navigate via trip Route</string>
    <string name="expires_in">Expires in</string>
    <string name="share_caption">What are you doing? (optional)</string>
    <string name="no_follower">NO FOLLOWER</string>
    <string name="all_member">All Member</string>
    <string name="friends_attending">Friends Attending</string>
    <string name="add_more">Add More friends</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="remove_blocked_user">Remove User</string>
    <string name="sure_remove_block">Are you share about remove this user from block list?</string>
    <string name="remove">Remove</string>
    <string name="emergency_sos">Emergency SOS</string>
    <string name="emergency_no">911</string>
    <string name="fire_police_emergency">Fire, Police, Emergency</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="add_contect">Add Contact +</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_number">Contact No</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="edit_session">Edit Session</string>
    <string name="delete_session">Delete Session</string>
    <string name="group_name">Group Name</string>
    <string name="address">Address</string>
    <string name="edit">Edit</string>
    <string name="pick_radius">Select Radius (in KM)</string>
    <string name="radius_10">2</string>
    <string name="no_trips_available">No Routes Available!</string>
    <string name="upcoming_routes">Upcoming Routes</string>
    <string name="no_history_data_available">No History Data Available!</string>
    <string name="app_logo">App Logo</string>
    <string name="minutes_template">%1$s Minutes</string>
    <string name="hours_template">%1$s Hours</string>
    <string name="update_trip">Update Route</string>
    <string name="share_text">Share</string>
    <string name="not_applicable">N/A</string>
    <string name="animate_app_logo">animate splash to login</string>
    <string name="person_sharing_their_location">%1d person(s) sharing their location with you</string>
    <string name="location_shared">Location Shared</string>
    <string name="full_address">Full Address</string>
    <string name="marker_suggestion">Long press on Map to add Marker</string>
    <string name="waypoint_suggestion">Long press on Map to add Waypoint</string>
    <string name="reset_password">Reset Password</string>
    <string name="no_success">No Success</string>
    <string name="successful_but_no_routes">Successful but no route</string>
    <string name="view_trip">View Your Route</string>
    <string name="share_your_trip">Share Your Route</string>
    <string name="trip_created">Route Created!</string>
    <string name="trip_updated">Route Updated!</string>
    <string name="marker_address">Address</string>
    <string name="marker_full_address">Details</string>
    <string name="landmark_image">Landmark Image</string>
    <string name="mark_details">Marker Details</string>
    <string name="delete">Delete</string>
    <string name="add_photo">+ Add Photo</string>
    <string name="name">Name</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_verification_code">Please Enter Verification Code we Send to your Mail</string>
    <string name="verify">Verify</string>
    <string name="camera_text">Camera</string>
    <string name="gallery_text">Gallery</string>
    <string name="share_live_location">Share Live Location</string>
    <string name="share_location">Share Location</string>
    <string name="without_sharing_location">Without Sharing Location</string>
    <string name="description">Description</string>
    <string name="security_checklist">Security Checklist</string>
    <string name="add_checklist">Add Item</string>
    <string name="title">Title</string>
    <string name="please_add_description">Please Add Description</string>
    <string name="share">Share</string>
    <string name="update">Update</string>
    <string name="send_report">Send a report</string>
    <string name="close">Close</string>
    <string name="bad_route">Bad Route</string>
    <string name="enter_issue">Write issue here..</string>
    <string name="done">Done</string>
    <string name="edit_marker_text">Edit Marker</string>
    <string name="enter_name_address">Enter address to update this marker</string>
    <string name="aa_email">aa@aa.com</string>
    <string name="aa_password">12345678</string>
    <string name="text_no_user_found">No user found</string>
    <string name="block_list_text">Blocked List</string>
    <string name="trip_list_empty">You Have no Current Trip</string>
    <string name="permission_denied">Permission denied</string>
    <string name="no_trip_text">You have no Trip</string>
    <string name="user_search_text">User Search</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="create_manage_group_text">Create and Manage Group</string>
    <string name="email_empty">Email should not be empty</string>
    <string name="text_calender_title">"Pick Date and Time"</string>
    <string name="text_radius">Radius (Meter)</string>
    <string name="yard_text"> yard</string>
    <string name="distance_text">Distance: </string>
    <string name="text_add_system_checklist">Add System Checklist</string>
    <string name="arrival_text">You have arrived!</string>
    <string name="text_something_went_wrong">Something went wrong..</string>
    <string name="text_hazard">Hazard</string>
    <string name="text_length">Total Length</string>
    <string name="text_street">Street</string>
    <string name="text_satellite_street">Satellite</string>
    <string name="text_outdoor">S.Street</string>
    <string name="text_save">Save</string>
    <string name="text_outdoor_maps">Outdoor</string>
    <string name="text_3d_maps">3D View</string>
    <string name="text_enter_code">Enter code</string>
    <string name="text_account_verification">Verify Account</string>
    <string name="text_add_from_contact">Add from contact list</string>
    <string name="text_add_new_contact">Add new contact</string>
    <string name="text_disclaimer_title">Disclaimer</string>
    <string name="text_disclaimer">Route Recon does not monitor, investigate or alert authorities to emergency message. it is the user\'s responsibility to coordinate with designated emergency contact(s) what to do if/when an emergency message is received.</string>
    <string name="tools">Tools</string>
    <string name="track">Track</string>
    <string name="title_time">Time</string>
    <string name="title_distance">Distance</string>
    <string name="title_speed_avg">Speed(avg)</string>
</resources>