<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ResetPasswordFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/field_padding_margin"
        android:text="@string/forget_pass"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:textSize="@dimen/login_sign_up_text_size"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/field_padding_margin"
        android:text="@string/send_verification"
        android:textSize="@dimen/login_sign_up_text_size"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/field_padding_margin"
        android:text="@string/please_check_mail"
        android:textSize="@dimen/login_sign_up_text_size"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableStart="@drawable/ic_mail_outline_black_24dp"
        android:drawablePadding="@dimen/field_padding_margin"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="@dimen/field_padding_margin"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="@dimen/login_sign_up_text_size" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/field_padding_margin"
        android:background="@drawable/forget_pass_btn_bg"
        android:gravity="center"
        android:padding="@dimen/field_padding_margin"
        android:text="@string/send_code"
        android:textColor="@color/white"
        android:textSize="@dimen/login_sign_up_text_size" />

</LinearLayout>