<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ContactChooserFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/field_padding_margin"
        android:text="@string/text_disclaimer_title"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="@dimen/big_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/field_padding_margin"
        android:text="@string/text_disclaimer"
        android:textColor="@android:color/black"
        android:textSize="@dimen/login_sign_up_text_size" />

    <TextView
        android:id="@+id/tv_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/field_padding_margin"
        android:padding="@dimen/field_padding_margin"
        android:text="@string/text_add_from_contact"
        android:textColor="@color/orange"
        android:textSize="@dimen/login_sign_up_text_size" />

    <TextView
        android:id="@+id/tv_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/field_padding_margin"
        android:padding="@dimen/field_padding_margin"
        android:text="@string/text_add_new_contact"
        android:textColor="@color/orange"
        android:textSize="@dimen/login_sign_up_text_size" />

</LinearLayout>