<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/field_padding_margin"
    tools:context=".fragments.VerifyAccountFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/field_padding_margin"
        android:text="@string/text_account_verification"
        android:textColor="@color/orange"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/field_padding_margin"
        android:textSize="@dimen/login_sign_up_text_size"
        tools:text="@tools:sample/cities" />

    <EditText
        android:id="@+id/et_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/text_enter_code"
        android:inputType="text"
        android:padding="@dimen/field_padding_margin"
        android:textSize="@dimen/login_sign_up_text_size"
        tools:text="@tools:sample/cities" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey"
        android:padding="@dimen/field_padding_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="@dimen/field_padding_margin"
            android:text="@string/cancel"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="@dimen/field_padding_margin"
            android:text="@string/verify"
            android:textAllCaps="false" />

    </LinearLayout>


</LinearLayout>