<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_segment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center|top"
    android:layout_margin="@dimen/field_padding_margin"
    android:orientation="horizontal"
    android:padding="@dimen/field_padding_margin"
    android:weightSum="4">

    <Button
        android:id="@+id/btn_safe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/next_trip_colored_bg"
        android:clickable="false"
        android:text="@string/safe"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/login_sign_up_text_size" />

    <Button
        android:id="@+id/btn_landmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/pending_unselected"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/landmark"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textSize="@dimen/login_sign_up_text_size" />

    <Button
        android:id="@+id/btn_hazard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/pending_unselected"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/text_hazard"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textSize="@dimen/login_sign_up_text_size" />

    <Button
        android:id="@+id/btn_danger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/last_trip_bg"
        android:text="@string/danger"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textSize="@dimen/login_sign_up_text_size" />


</LinearLayout>