<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/trip_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewTripName"
            android:text="@string/trip_name"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TextView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/title_time"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

            </TextView>


            <TextView
                android:text="@string/title_distance"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

            </TextView>

            <TextView
                android:text="@string/title_speed_avg"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

            </TextView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewTime"
                android:text="@string/tools"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

            </TextView>

            <TextView
                android:id="@+id/timeDistance"
                android:text="@string/tools"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

            </TextView>

            <TextView
                android:id="@+id/textViewSpeed"
                android:text="@string/tools"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

            </TextView>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>