<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/field_padding_margin"
    android:layout_marginRight="@dimen/field_padding_margin"
    android:orientation="vertical"
    android:padding="@dimen/field_padding_margin"
    tools:context=".fragments.ChangePasswordFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/field_padding_margin"
        android:text="@string/old_password"
        android:textColor="@color/olive_color" />

    <EditText
        android:id="@+id/et_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableStart="@drawable/ic_password_icon"
        android:drawablePadding="@dimen/field_padding_margin"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:padding="@dimen/field_padding_margin"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/login_sign_up_text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/field_padding_margin"
        android:text="@string/new_password"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableStart="@drawable/ic_password_icon"
        android:drawablePadding="@dimen/field_padding_margin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/field_padding_margin"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/login_sign_up_text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey" />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableStart="@drawable/ic_password_icon"
        android:drawablePadding="@dimen/field_padding_margin"
        android:hint="@string/confirm_pass"
        android:inputType="textPassword"
        android:padding="@dimen/field_padding_margin"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/login_sign_up_text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey" />


    <Button
        android:id="@+id/btn_okay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/field_padding_margin"
        android:background="@drawable/nav_btn_bg"
        android:text="@string/ok"
        android:textAllCaps="true"
        android:textColor="@color/white" />

</LinearLayout>